z-index fix

--- a/src/app/authentication/auth/auth.component.less
+++ b/src/app/authentication/auth/auth.component.less
@@ -194,7 +194,7 @@ button[tuiButton] {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2;
+  z-index: 10;
 }
 
 .modal-container {
