--- a/src/app/sections/settings/tabs/settings-tabs.component.less
+++ b/src/app/sections/settings/tabs/settings-tabs.component.less
@@ -1,7 +1,7 @@
 .tabs-wrapper {
   position: sticky;
   top: calc(var(--header-height)); /* Position it below the header */
-  z-index: 10; /* Ensures it stays above other content when scrolling */
+  z-index: 2; /* Ensures it stays above other content when scrolling */
   background-color: var(--main-bg-color); /* Same as the desired background */
 }
 
